--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#couch {
+    transition: filter 0.3s ease;
+}
+
+.logo-gradient {
+    @apply text-transparent bg-clip-text bg-gradient-to-r from-slate-900 to-slate-700 dark:from-slate-300 dark:to-slate-500;
+}
