--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
     @apply text-transparent bg-clip-text bg-gradient-to-r from-slate-900 to-slate-700 dark:from-slate-300 dark:to-slate-500;
 }
 
-.card . {
+.card {
     transition: all 0.3s ease-in-out;
 }
 
